--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,139 @@
+aiohttp
+aiosignal
+altair
+annotated-types
+anyio
+async-timeout
+attrs
 beautifulsoup4
-dotenv
+blinker
+blis
+cachetools
+catalogue
+certifi
+cffi
+charset-normalizer
+click
+cloudpathlib
+colorama
+confection
+cryptography
+cymem
+dataclasses-json
+deprecation
+dill
+elastic-transport
+elasticsearch
+et-xmlfile
+faiss-cpu
+fastapi
+filelock
+frozenlist
+fsspec
+gitdb
+GitPython
+googlesearch-python
+greenlet
+h11
+huggingface-hub
+idna
+img2pdf
+importlib-metadata
+Jinja2
+joblib
+jsonpatch
+jsonpointer
+jsonschema
+jsonschema-specifications
 langchain
+langcodes
+langsmith
 lxml
+manifest-ml
+markdown-it-py
+MarkupSafe
+marshmallow
+mdurl
+multidict
+murmurhash
+mypy-extensions
+nltk
+numexpr
 numpy
-pandas
-Pillow
-streamlit
-pytesseract
+ocrmypdf
 openai
-openpyxl
 opencv-python
-requests
+openpyxl
+outcome
+packaging
+pandas
 pdf2image
 pdfminer.six
 pikepdf
+Pillow
+pluggy
+preshed
+protobuf
+pyarrow
+pycparser
+pydantic
+pydantic_core
+pydeck
+Pygments
+pypdfium2
+PySocks
+pytesseract
+python-dateutil
+python-dotenv
+pytz
+PyYAML
+redis
+referencing
+regex
+reportlab
+requests
+rich
+rpds-py
+safetensors
+selenium
+six
+smart-open
+smmap
+sniffio
+sortedcontainers
+soupsieve
+spacy
+spacy-legacy
+spacy-loggers
+SQLAlchemy
+sqlitedict
+srsly
+starlette
+streamlit
+tenacity
+thinc
+tiktoken
+tokenizers
+toml
+toolz
+tornado
+tqdm
+transformers
+trio
+trio-websocket
+typer
+typing-inspect
+typing_extensions
+tzdata
+tzlocal
+urllib3
+uvicorn
+validators
+wasabi
+watchdog
+weasel
+wikipedia
+wsproto
+xxhash
+yarl
+zipp
